hard-gists/883b3b4a51b0db7d0e0d/run.log
=== Docker Run Log for 883b3b4a51b0db7d0e0d ===
Started at: Mi 29. Okt 18:03:04 CET 2025

[2025-10-29 18:03:04] START: Running container for 883b3b4a51b0db7d0e0d
[2025-10-29 18:03:05] SUCCESS: Container 9163f68ba0fe2b18d4664820e37f201e63ebc309ef8e00af6f58783e7e4177fd started for 883b3b4a51b0db7d0e0d
=== Container logs for 883b3b4a51b0db7d0e0d ===
  File "/snippet.py", line 25
    print "Running..."
    ^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 883b3b4a51b0db7d0e0d ===
[2025-10-29 18:03:07] INFO: Container 9163f68ba0fe2b18d4664820e37f201e63ebc309ef8e00af6f58783e7e4177fd has stopped
